<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="coupletones.pro.cse110.coupletones.AddActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_welcome"
        android:id="@+id/add_tv_logo"
        android:layout_marginTop="72dp"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_tv_ur"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="5dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:maxEms="10"
        android:id="@+id/add_et_input"
        android:hint="@string/add_hints"
        android:textAlignment="center"
        android:maxLines="2"
        android:layout_above="@+id/add_btn_chkid"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_enter_app"
        android:id="@+id/add_btn_chkid"
        android:onClick="addPartner"
        android:layout_marginBottom="101dp"
        android:layout_above="@+id/add_tv_ur"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_et_selfid"
        android:ems="10"
        android:maxEms="10"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/add_et_input"
        android:layout_alignStart="@+id/add_et_input"
        android:maxLines="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_ur_id"
        android:id="@+id/add_tv_ur_id"
        android:layout_above="@+id/add_et_selfid"
        android:layout_alignStart="@+id/add_et_selfid"/>

    <!--
    <Button
        android:id="@+id/invite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite_friends"
        android:layout_below="@+id/add_tv_logo"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="114dp" />
    <FrameLayout
        android:id="@+id/snackbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"/>
        -->


</RelativeLayout>
