<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="#36454F"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:text="Partner Location Settings" />
    <Button
        android:id="@+id/show_location_on_map"
        android:text="Show Location on Map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:onClick="showOnMap"/>
    <Button
        android:id="@+id/set_audible_arrival_tone"
        android:text="Set Arrival Audible Tone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:onClick="chooseAudibleNotification"/>
    <Button
        android:id="@+id/set_audible_departure_tone"
        android:text="Set Departure Audible Tone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:onClick="chooseAudibleNotification" />
    <Button
        android:id="@+id/set_vibe_arrival_tone"
        android:text="Set Arrival Vibe Tone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:onClick="chooseVibeNotification"/>
    <Button
        android:id="@+id/set_vibe_departure_tone"
        android:text="Set Departure Vibe Tone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:onClick="chooseVibeNotification"/>
</LinearLayout>